# coyote-scheduler

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build-test-linux.yml  build-test-macos.yml  build-test-windows.yml
docs/: building.md  profiling.md
include/coyote/: error_code.h  scheduler.h  settings.h
include/coyote/atomicoperations/: atomicmodel.h  atomicoperations.h  atomicstate.h
include/coyote/operations/: atomicactions.h  atomicmodel.h  atomicoperations.h  atomicstate.h  operation.h  operations.h  state.h
include/coyote/strategies/: pct_strategy.h  random.h  random_strategy.h  strategy.h  strategy_type.h
scripts/: build-linux.sh  build.bat  build.sh  run-tests.bat  run-tests.sh
src/: CMakeLists.txt  atomicactions.cc  atomicoperations.cc  atomicstate.cc  error_code.cc  ffi.cc  scheduler.cc  settings.cc  state.cc
src/atomic_operations/: Makefile  atomicactions.cc  atomicactions.h  notes.org  state.cc  state.h  test.cc
src/atomic_operations/test/: acq_rel_semantics.c
src/operations/: operation.cc  operations.cc
src/scheduler/: CMakeLists.txt  ffi.cc  ffi.h  scheduler.cc  scheduler.h
src/scheduler/errors/: error_code.cc  error_code.h
src/scheduler/operations/: operation.cc  operation.h  operation_status.h  operations.h
src/scheduler/strategies/: random.h  random_strategy.cc  random_strategy.h
src/scheduler/test/: CMakeLists.txt  coverage.cc  create_operations.cc  create_scheduler.cc  fork_join.cc  fork_join_mock.cc  mutual_exclusion.cc  race_condition.cc  simple_semaphore.cc  test.h
src/scheduler/test/integration/: race_condition.cc
src/scheduler/test/unit/: operations.cc
src/strategies/: pct_strategy.cc  random.cc  random_strategy.cc
test/: CMakeLists.txt  create_scheduler.cc  mutual_exclusion.cc  race_condition.cc  simple_semaphore.cc  synchronize_resources.cc  test.h
test/coverage/: calculator.cc  string_trace.cc
test/grpc/: create_operations.cc  create_scheduler.cc
test/integration/: atmoic_models.cc  atomic_counter.cc  atomic_operations.cc  atomic_rw_lock.cc  calculator.cc  create_operations (2).cc  create_operations.cc  create_scheduler.cc  dekker_no_fence.cc  fork_join_mock.cc  mutual_exclusion.cc  race_condition.cc  simple_semaphore.cc  synchronize_resources.cc
test/integration/atomic_operations/: atomic_blk_rel_seq.cc  atomic_block_rel_race.cc  atomic_counter.cc  atomic_dekker_false_unreach_call.cc  atomic_dekker_no_fence.cc  atomic_fib_bench_false_unreach_call.cc  atomic_fib_bench_true-longest-unreach-call.cc  atomic_fib_bench_true-unreach-call.cc  atomic_fib_mod_false-unreach-call.cc  atomic_fib_mod_true-unreach-call.cc  atomic_flipper.cc  atomic_fmaxsym_cas.cc  atomic_fmaxsym_cas_true-unreach-call.cc  atomic_mutex.cc  atomic_n_writers_m_readers.cc  atomic_operations.cc  atomic_peterson.cc  atomic_read_write_lock.cc  atomic_read_write_lock_unreach.cc  atomic_rel-seq-no-race.cc  atomic_rw_lock.cc  atomic_sc-no-race.cc  atomic_triangular_false-longer-unreach-call.cc  atomic_triangular_false-longest-unreach-call.cc  atomic_triangular_false-unreach-call.cc  atomic_triangular_true-longer-unreach-call.cc  atomic_triangular_true-longest-unreach-call.cc  atomic_triangular_true-unreach-call.cc
test/unit/: CMakeLists.txt  grpc.cc  pct_strategy.cc  random_strategy.cc
test/unit/atomic_litmus/: litmus_acq_rel_semantics.cc  litmus_double-relseq.cc  litmus_load-buffer.cc  litmus_mo-satcycle.cc  litmus_pending-release.cc  litmus_releaseseq.cc  litmus_rmw.cc  litmus_seq-lock.cc  litmus_uninit.cc  litmus_wrcs.cc
