# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

include_directories(".")
include_directories("../include")

file(GLOB test_files "*.cc")
foreach(test_file ${test_files})
    get_filename_component(test_name ${test_file} NAME_WE)
    add_executable(${test_name} ${test_file})
    if(MSVC)
        target_link_libraries(${test_name} PRIVATE coyote_static)
    else()
        target_link_libraries(${test_name} PRIVATE coyote_static Threads::Threads)
    endif()
    if(CMAKE_BUILD_TYPE MATCHES Debug)
        target_compile_definitions(${test_name} PRIVATE COYOTE_DEBUG_LOG)
    endif()
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()

# add_subdirectory(integration)
