file(GLOB test_files "*.cc")
foreach(test_file ${test_files})
    get_filename_component(test_name ${test_file} NAME_WE)
    message(STATUS "${test_name}")
    add_executable(${test_name} ${test_file})
    if(MSVC)
        target_link_libraries(${test_name} PRIVATE coyote_static)
    else()
        target_link_libraries(${test_name} PRIVATE coyote_static Threads::Threads)
    endif()
    add_test(NAME ${test_name} COMMAND ${test_name})
endforeach()
